baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_namespace_listing_llm.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class            llm.Config                       ns_llm/models.baml:2
function         llm.LlmIdentity                  ns_llm/models.baml:7
