baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_reflect_package_listing.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class            reflect.Arg                      <builtin>/reflect/reflect.baml:2
class            reflect.Meta                     <builtin>/reflect/reflect.baml:14
class            reflect.WithMeta                 <builtin>/reflect/reflect.baml:27
class            reflect.Span                     <builtin>/reflect/reflect.baml:38
class            reflect.DiagnosticHighlight      <builtin>/reflect/reflect.baml:45
class            reflect.DiagnosticAnnotation     <builtin>/reflect/reflect.baml:60
class            reflect.DiagnosticRelatedInfo    <builtin>/reflect/reflect.baml:68
class            reflect.Diagnostic               <builtin>/reflect/reflect.baml:79
interface        reflect.TypeView                 <builtin>/reflect/reflect.baml:96
type             reflect.TypeKind                 <builtin>/reflect/reflect.baml:102
interface        reflect.AnyFunction              <builtin>/reflect/reflect.baml:120
interface        reflect.AnyClass                 <builtin>/reflect/reflect.baml:133
class            reflect.Signature                <builtin>/reflect/reflect.baml:225
class            reflect.InvalidArgumentError     <builtin>/reflect/reflect.baml:248
class            reflect.CompileArtifact          <builtin>/reflect/reflect.baml:255
class            reflect.Package                  <builtin>/reflect/reflect.baml:260
class            reflect.Session                  <builtin>/reflect/reflect.baml:384
function         reflect.signature                <builtin>/reflect/reflect.baml:468
function         reflect.call_any                 <builtin>/reflect/reflect.baml:485
class            reflect.Type                     <builtin>/reflect/type.baml:8
class            reflect.array.Type               <builtin>/reflect/ns_array/array.baml:2
class            reflect.class.Field              <builtin>/reflect/ns_class/class.baml:7
function         reflect.class.new                <builtin>/reflect/ns_class/class.baml:36
function         reflect.class.builder            <builtin>/reflect/ns_class/class.baml:61
class            reflect.class.Builder            <builtin>/reflect/ns_class/class.baml:67
class            reflect.class.PendingType        <builtin>/reflect/ns_class/class.baml:116
function         reflect.class.get_field          <builtin>/reflect/ns_class/class.baml:161
class            reflect.class.Type               <builtin>/reflect/ns_class/class.baml:166
class            reflect.enum.Value               <builtin>/reflect/ns_enum/enum.baml:2
function         reflect.enum.value               <builtin>/reflect/ns_enum/enum.baml:9
function         reflect.enum.new                 <builtin>/reflect/ns_enum/enum.baml:23
function         reflect.enum.get_value           <builtin>/reflect/ns_enum/enum.baml:37
class            reflect.enum.Type                <builtin>/reflect/ns_enum/enum.baml:42
class            reflect.errors.CompilationError  <builtin>/reflect/ns_errors/errors.baml:2
class            reflect.errors.EvaluationError   <builtin>/reflect/ns_errors/errors.baml:8
class            reflect.errors.TypeMismatch      <builtin>/reflect/ns_errors/errors.baml:19
class            reflect.errors.SessionBusy       <builtin>/reflect/ns_errors/errors.baml:24
class            reflect.function.Parameter       <builtin>/reflect/ns_function/function.baml:3
class            reflect.function.Type            <builtin>/reflect/ns_function/function.baml:11
class            reflect.interface.Type           <builtin>/reflect/ns_interface/interface.baml:2
class            reflect.interface.Implementation <builtin>/reflect/ns_interface/interface.baml:32
function         reflect.interface.implementation <builtin>/reflect/ns_interface/interface.baml:54
function         reflect.literal.new              <builtin>/reflect/ns_literal/literal.baml:3
class            reflect.literal.Type             <builtin>/reflect/ns_literal/literal.baml:8
function         reflect.map.new                  <builtin>/reflect/ns_map/map.baml:3
class            reflect.map.Type                 <builtin>/reflect/ns_map/map.baml:8
class            reflect.primitive.Type           <builtin>/reflect/ns_primitive/primitive.baml:2
class            reflect.tuple.Type               <builtin>/reflect/ns_tuple/tuple.baml:2
function         reflect.union.new                <builtin>/reflect/ns_union/union.baml:7
class            reflect.union.Type               <builtin>/reflect/ns_union/union.baml:12
