baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_testing_package_listing.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class            testing.TestRegistration         <builtin>/testing/registry.baml:5
class            testing.TestSetRegistration      <builtin>/testing/registry.baml:11
class            testing.InvalidTestName          <builtin>/testing/registry.baml:20
class            testing.TestCollector            <builtin>/testing/registry.baml:24
function         testing.$invoke_collector        <builtin>/testing/registry.baml:142
class            testing.SerializedTest           <builtin>/testing/registry.baml:148
class            testing.SerializedTestSet        <builtin>/testing/registry.baml:153
type             testing.SerializedTestDef        <builtin>/testing/registry.baml:159
class            testing.TestRegistry             <builtin>/testing/registry.baml:163
function         testing.Quorum                   <builtin>/testing/runners.baml:14
function         testing.Retry                    <builtin>/testing/runners.baml:50
function         testing.PassRate                 <builtin>/testing/runners.baml:85
function         testing.Sequential               <builtin>/testing/runners.baml:117
function         testing.FailFast                 <builtin>/testing/runners.baml:127
type             testing.Outcome                  <builtin>/testing/types.baml:4
class            testing.RunReport                <builtin>/testing/types.baml:7
class            testing.TestReport               <builtin>/testing/types.baml:19
class            testing.TestSetReport            <builtin>/testing/types.baml:26
type             testing.ChildReport              <builtin>/testing/types.baml:40
type             testing.TestBody                 <builtin>/testing/types.baml:54
type             testing.TestSetBody              <builtin>/testing/types.baml:56
type             testing.TestReportThunk          <builtin>/testing/types.baml:58
type             testing.TestSetReportThunk       <builtin>/testing/types.baml:60
type             testing.ChildReportThunk         <builtin>/testing/types.baml:62
type             testing.TestRunner               <builtin>/testing/types.baml:64
class            testing.TestSetChild             <builtin>/testing/types.baml:67
type             testing.TestSetRunner            <builtin>/testing/types.baml:79
class            testing.FlatTestReport           <builtin>/testing/types.baml:95
